objects/CaseTriageExecutionOrder__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SFDC1-7557 This custom setting will help Admins to change/ revert the order of execution of Triage records</description>
    <fields>
        <fullName>ASC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7557 Check this checkbox if field1 needs to be sorted in ascending order, else leave unchecked.</description>
        <inlineHelpText>Check this checkbox if field1 needs to be sorted in ascending order, else leave unchecked.</inlineHelpText>
        <label>ASC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DESC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7557 Check this checkbox if field1 needs to be sorted in descending order, else leave unchecked.</description>
        <inlineHelpText>Check this checkbox if field1 needs to be sorted in descending order, else leave unchecked.</inlineHelpText>
        <label>DESC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>SFDC1-7557 Enter the field API name which needs to be considered for Triage sorting</description>
        <inlineHelpText>Enter the field API name which needs to be considered for Triage sorting</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CaseTriageExecutionOrder</label>
</CustomObject>